--- a/app/src/main/res/layout/fragment_scrap_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_scrap_bottom_sheet.xml
@@ -35,7 +35,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/scrap_bottom_sheet_rv"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:layout_marginTop="30dp"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/scrap_title_tv"
