--- a/app/src/main/res/layout/activity_bookclub_place_search.xml
+++ b/app/src/main/res/layout/activity_bookclub_place_search.xml
@@ -31,6 +31,8 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="30dp"
         android:singleLine="true"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
         app:layout_constraintStart_toEndOf="@id/bookclub_place_search_back_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
