--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -167,7 +167,7 @@
         android:layout_marginBottom="15dp"
         android:background="@android:color/transparent"
         android:clickable="true"
-        android:src="@drawable/btn_login_next"
+        app:srcCompat="@drawable/btn_login_next"
         app:layout_constraintBottom_toTopOf="@+id/first_login_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -209,7 +209,7 @@
         android:layout_height="17dp"
         android:layout_marginBottom="31dp"
         android:text="------------------------ SNS 계정으로 로그인하기 ------------------------"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton"
+        app:layout_constraintBottom_toTopOf="@+id/google_login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
@@ -217,7 +217,7 @@
         app:layout_constraintVertical_bias="0.957" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/google_login_button"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginBottom="48dp"
@@ -234,11 +234,11 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_login_google"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton"
+        app:layout_constraintBottom_toBottomOf="@+id/google_login_button"
+        app:layout_constraintEnd_toEndOf="@+id/google_login_button"
         app:layout_constraintHorizontal_bias="0.036"
-        app:layout_constraintStart_toStartOf="@+id/imageButton"
-        app:layout_constraintTop_toTopOf="@+id/imageButton"
+        app:layout_constraintStart_toStartOf="@+id/google_login_button"
+        app:layout_constraintTop_toTopOf="@+id/google_login_button"
         app:layout_constraintVertical_bias="0.478" />
 
 
