--- a/app/src/main/res/layout/activity_preference.xml
+++ b/app/src/main/res/layout/activity_preference.xml
@@ -58,55 +58,57 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="380dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal"
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/option1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="16dp"
+                android:layout_margin="4dp"
                 android:background="@drawable/btn_option_background"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="8dp"
                 android:text="전문적인 지식 쌓기"
                 android:textColor="@color/white"
-                android:textSize="13sp"
-                android:layout_margin="4dp"/>
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/option2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="16dp"
+                android:layout_margin="4dp"
                 android:background="@drawable/btn_option_background"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="8dp"
                 android:text="힐링하기"
                 android:textColor="@color/white"
-                android:textSize="13sp"
-                android:layout_margin="4dp"/>
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/option3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="16dp"
+                android:layout_margin="4dp"
                 android:background="@drawable/btn_option_background"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="8dp"
                 android:text="허구 속 현실 찾기"
                 android:textColor="@color/white"
-                android:textSize="13sp"
-                android:layout_margin="4dp"/>
+                android:textSize="13sp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_horizontal"
-            android:layout_marginBottom="8dp">
+            android:gravity="center_vertical"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp">
 
             <TextView
                 android:id="@+id/option4"
@@ -149,7 +151,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_horizontal">
+            android:gravity="center_vertical"
+            android:layout_marginStart="16dp">
 
             <TextView
                 android:id="@+id/option7"
@@ -184,7 +187,7 @@
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/btn_next"
         android:clickable="true"
         android:src="@drawable/btn_next"
