--- a/app/src/main/res/layout/fragment_bookclub_book.xml
+++ b/app/src/main/res/layout/fragment_bookclub_book.xml
@@ -11,10 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="책마다 북클럽"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:textSize="22sp"
+        android:fontFamily="@font/pretendard_bold"
         android:textColor="@color/colorLabelNormal"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="26dp"
         android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -47,17 +47,26 @@
         android:id="@+id/bookclub_book_content_tl"
         android:background="@color/colorMainBg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="43dp"
         android:layout_marginTop="16dp"
         app:tabTextColor="@color/colorLabelAlternative"
+        app:tabTextAppearance="@style/tab_layout_text"
         app:tabSelectedTextColor="@color/colorLabelNormal"
         app:tabIndicatorColor="@color/colorLabelNormal"
         app:tabIndicatorHeight="2dp"
         app:tabIndicatorFullWidth="false"
         app:tabGravity="fill"
         app:tabMode="scrollable"
+        app:tabRippleColor="@null"
         app:layout_constraintTop_toBottomOf="@id/bookclub_book_title_tv"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.8dp"
+        android:background="#3770737C"
+        app:layout_constraintTop_toBottomOf="@+id/bookclub_book_content_tl"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/bookclub_book_content_vp"
