--- a/app/src/main/res/layout/fragment_mypage_review_calendar.xml
+++ b/app/src/main/res/layout/fragment_mypage_review_calendar.xml
@@ -3,24 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingTop="40dp"
+    android:paddingTop="30dp"
     android:background="@color/colorMainBg"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <!-- Book Collection Text -->
-    <TextView
-        android:id="@+id/mypage_calendar_review_swap_btn"
-        android:layout_width="85dp"
-        android:layout_height="29dp"
-        android:textSize="13sp"
-        android:text="서평 모아보기"
-        android:fontFamily="@font/pretendard_medium"
-        android:textColor="@color/colorLabelNeutral"
-        android:background="@drawable/edit_text_radius_30"
-        android:gravity="center"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -46,8 +31,8 @@
                     android:id="@+id/calendar_previous_month_iv"
                     android:layout_width="12dp"
                     android:layout_height="10dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ic_prev"
+                    android:scaleType="center"
+                    android:src="@drawable/ic_prev_triangle"
                     android:layout_gravity="center"/>
 
                 <TextView
@@ -63,8 +48,8 @@
                     android:id="@+id/calendar_next_month_iv"
                     android:layout_width="12dp"
                     android:layout_height="10dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ic_next"
+                    android:scaleType="center"
+                    android:src="@drawable/ic_next_triangle"
                     android:layout_gravity="center"/>
 
             </LinearLayout>
