--- a/app/src/main/res/layout/item_bookclub_book_participation.xml
+++ b/app/src/main/res/layout/item_bookclub_book_participation.xml
@@ -25,7 +25,7 @@
     </androidx.cardview.widget.CardView>
 
     <ImageView
-        android:layout_width="327dp"
+        android:layout_width="320dp"
         android:layout_height="189dp"
         android:elevation="4dp"
         android:src="@drawable/color_bookclub_participation_gradient"
@@ -38,7 +38,7 @@
         android:id="@+id/item_participant_over_iv"
         android:layout_width="55dp"
         android:layout_height="82dp"
-        android:scaleType="fitXY"
+        android:scaleType="center"
         android:elevation="4dp"
         android:background="@color/transparent"
         android:src="@drawable/img_book_participant_book_1"
@@ -58,6 +58,7 @@
         android:textColor="@color/colorLabelNormal"
         android:elevation="4dp"
         android:layout_marginStart="9dp"
+        android:layout_marginTop="11dp"
         app:layout_constraintTop_toTopOf="@+id/item_participant_over_iv"
         app:layout_constraintBottom_toTopOf="@+id/item_participant_over_up_tv2"
         app:layout_constraintStart_toEndOf="@+id/item_participant_over_iv"
@@ -74,7 +75,6 @@
         android:elevation="4dp"
         app:layout_constraintTop_toBottomOf="@+id/item_participant_over_up_tv1"
         app:layout_constraintStart_toStartOf="@+id/item_participant_over_up_tv1"
-        app:layout_constraintBottom_toBottomOf="@+id/item_participant_over_iv"
         />
 
     <androidx.cardview.widget.CardView
