--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,10 @@
         <item name="cornerSize">28dp</item>
     </style>
 
+    <style name="tab_layout_text">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+    </style>
+
+
 </resources>
