--- a/app/src/main/res/layout/activity_bookclub_join.xml
+++ b/app/src/main/res/layout/activity_bookclub_join.xml
@@ -193,7 +193,7 @@
                 android:text="📕 인생은 탐구하는 것이다\n작가는 소설 속 주인공을 통해 독자들에게 말한다. 자신의 인생을 유심히 관찰하면서 살아가라고. 되어가는 대로 놓아두지 말고 적절한 순간이 오면 과감하게 삶의 방향키를 돌릴 준비를 하면서 살라고. 인생은 그냥 받아들이는 것이 아니라 전 생애를 걸고라도 탐구하면서 살아야 하는 무엇이라고.\n주인공 안진진의 나이가 스물다섯인 것도 그 때문일 것이다. ‘삶에 대해 방관하고 냉소하기를 일삼으며’, ‘삶이란 것을 놓고 진지하게 대차대조표를 작성해본 적도 없이 무작정 손가락 사이로 인생을 흘려보내고 있는’ 주인공의 진지한 자기 검열에 수많은 이십대 독자들이 공감하고 자신의 인생을 다시 생각하게 만들었다는 독후감을 남기고 있으니 『모순』은 소설이 이룰 수 있는 가장 큰 성공을 거둔 셈이다.\n"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="10dp"
-                android:lineHeight="22sp"
+                android:lineHeight="20sp"
                 android:justificationMode="inter_word"
                 app:layout_constraintTop_toBottomOf="@+id/publisher_review_tv"
                 app:layout_constraintStart_toStartOf="parent"
@@ -355,6 +355,7 @@
         android:layout_width="match_parent"
         android:layout_height="46dp"
         android:text="가입하기"
+        android:textSize="16sp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/primary_btn_bg"
         android:textColor="@color/button_text_color"
