--- a/app/src/main/res/layout/activity_bookclub_book_detail.xml
+++ b/app/src/main/res/layout/activity_bookclub_book_detail.xml
@@ -25,7 +25,7 @@
                 android:layout_height="28dp"
                 android:src="@drawable/ic_prev_arrow"
                 android:scaleType="center"
-                android:layout_marginTop="54dp"
+                android:layout_marginTop="26dp"
                 android:layout_marginStart="20dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -93,6 +93,13 @@
                 android:textSize="18sp"
                 android:textColor="@color/white"
                 android:fontFamily="@font/pretendard_bold"
+                android:maxWidth="300dp"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:singleLine="true"
+                android:scrollHorizontally="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 app:layout_constraintBottom_toTopOf="@+id/book_author_tv"
                 app:layout_constraintStart_toStartOf="@+id/book_author_tv"/>
 
@@ -246,7 +253,7 @@
                 android:id="@+id/elapse_week_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2"
+                android:text="2주차 추천 완독률"
                 android:textSize="14sp"
                 android:textColor="@color/colorLabelNeutral"
                 android:fontFamily="@font/pretendard_medium"
@@ -254,22 +261,6 @@
                 android:layout_marginTop="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/my_completion_progress_bar"
                 app:layout_constraintStart_toStartOf="@+id/my_completion_progress_bar"
-                android:elevation="4dp"
-                />
-
-
-            <TextView
-                android:id="@+id/recommend_completion_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="주차 추천 완독률"
-                android:textSize="14sp"
-                android:textColor="@color/colorLabelNeutral"
-                android:fontFamily="@font/pretendard_medium"
-                android:background="@color/transparent"
-                app:layout_constraintTop_toTopOf="@+id/elapse_week_tv"
-                app:layout_constraintBottom_toBottomOf="@+id/elapse_week_tv"
-                app:layout_constraintStart_toEndOf="@+id/elapse_week_tv"
                 android:elevation="4dp"
                 />
 
@@ -312,7 +303,6 @@
         android:layout_height="69dp"
         android:background="@color/colorMainBg"
         android:layout_alignParentBottom="true"
-        android:visibility="invisible"
         />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -320,11 +310,12 @@
         android:layout_width="match_parent"
         android:layout_height="46dp"
         android:text="서평 인증하기"
+        android:textSize="16sp"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/primary_btn_bg"
         android:textColor="@color/button_text_color"
         android:layout_marginHorizontal="16dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:visibility="invisible"/>
+        android:layout_marginBottom="10dp"/>
 
 </RelativeLayout>
