--- a/app/src/main/res/layout/activity_bookclub_book_review_detail.xml
+++ b/app/src/main/res/layout/activity_bookclub_book_review_detail.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="100dp">
+        android:paddingBottom="55dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -146,145 +146,23 @@
                 app:layout_constraintTop_toBottomOf="@+id/upper_comment_border_iv"
                 app:layout_constraintStart_toStartOf="@+id/review_main_tv"/>
 
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/comments_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorMainBg"
-                android:clickable="true"
-                android:focusable="true"
-                android:orientation="vertical"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="20dp"
+                android:nestedScrollingEnabled="false"
                 app:layout_constraintTop_toBottomOf="@+id/comment_count_tv"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintStart_toStartOf="parent"/>
 
-                <LinearLayout
-                    android:id="@+id/item_linear"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:id="@+id/user_image"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:background="@drawable/circle_background"
-                        android:clipToOutline="true"
-                        android:src="@drawable/img_person_icon"/>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/user_name"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                tools:text="오래된 책장"
-                                android:textSize="12sp"
-                                android:textColor="@color/colorLabelNeutral"
-                                android:fontFamily="@font/pretendard_medium"/>
-
-                            <TextView
-                                android:id="@+id/time_text"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:ellipsize="end"
-                                android:lines="1"
-                                android:layout_marginStart="6dp"
-                                tools:text="4시간 전"
-                                android:textSize="11sp"
-                                android:textColor="@color/colorLabelNeutral"
-                                android:fontFamily="@font/pretendard_regular"/>
-
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/text"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            tools:text="서평이 너무 인상 깊네요"
-                            android:textSize="11sp"
-                            android:textColor="@color/colorLabelNeutral"
-                            android:fontFamily="@font/pretendard_regular"/>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal"
-                            android:layout_marginTop="8dp">
-
-                            <ImageView
-                                android:id="@+id/like_ic_iv"
-                                android:layout_width="14dp"
-                                android:layout_height="14dp"
-                                android:src="@drawable/ic_filled_heart"
-                                android:scaleType="center"
-                                />
-
-                            <TextView
-                                android:id="@+id/like_num"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:lines="1"
-                                android:text="좋아요 1"
-                                android:textColor="@color/colorPrimaryNormal"
-                                android:textSize="10dp"
-                                android:fontFamily="@font/pretendard_medium"
-                                android:layout_marginStart="2dp"/>
-
-                            <ImageView
-                                android:id="@+id/comment_ic_iv"
-                                android:layout_width="14dp"
-                                android:layout_height="14dp"
-                                android:src="@drawable/ic_comment"
-                                android:scaleType="center"
-                                android:layout_marginStart="10dp"
-                                />
-
-                            <TextView
-                                android:id="@+id/re_comment"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="답글 쓰기"
-                                android:textSize="10dp"
-                                android:textColor="@color/colorLabelNeutral"
-                                android:fontFamily="@font/pretendard_medium"
-                                android:layout_marginStart="2dp"/>
-                        </LinearLayout>
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"/>
-
-                    <ImageView
-                        android:id="@+id/vertical_dot"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:src="@drawable/ic_vertical_dot"
-                        android:layout_gravity="end" />
-                </LinearLayout>
-            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
     <ImageView
         android:id="@+id/floating_commnet_bg"
         android:layout_width="match_parent"
-        android:layout_height="69dp"
+        android:layout_height="55dp"
         android:background="@color/colorMainBg"
         android:layout_alignParentBottom="true"
         />
@@ -293,8 +171,9 @@
         android:id="@+id/floating_comment_edit_text"
         android:layout_width="match_parent"
         android:layout_height="36dp"
-        android:text="댓글을 입력해주세요"
-        android:textColor="@color/colorLabelAlternative"
+        android:hint="댓글을 입력해주세요"
+        android:textColorHint="@color/colorLabelAlternative"
+        android:textColor="@color/white"
         android:textSize="14sp"
         android:fontFamily="@font/pretendard_regular"
         android:background="@drawable/edit_text_radius_30"
