--- a/app/src/main/res/layout/fragment_bookclub_book_participation.xml
+++ b/app/src/main/res/layout/fragment_bookclub_book_participation.xml
@@ -1,49 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<!--<ScrollView-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_height="match_parent"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:background="@color/colorMainBg">-->
+
+<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:background="@color/colorMainBg">
+    android:background="@color/colorMainBg"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:paddingBottom="20dp">
+<!--        <TextView-->
+<!--            android:id="@+id/bookclub_participation_main_tv"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:lineHeight="29dp"-->
+<!--            android:text="날씨가 추워진 1월,\n커피와 함께 독서 시작해 볼까요?"-->
+<!--            android:textSize="22sp"-->
+<!--            android:fontFamily="@font/pretendard_semibold"-->
+<!--            android:textColor="@color/colorLabelNormal"-->
+<!--            android:layout_marginStart="20dp"-->
+<!--            android:layout_marginTop="21dp"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"/>-->
 
-        <TextView
-            android:id="@+id/bookclub_participation_main_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:lineHeight="29dp"
-            android:text="날씨가 추워진 1월,\n커피와 함께 독서 시작해 볼까요?"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/colorLabelNormal"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="21dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+<!--        <ImageView-->
+<!--            android:layout_width="150dp"-->
+<!--            android:layout_height="150dp"-->
+<!--            android:background="@drawable/img_green_blur_bg"-->
+<!--            android:scaleType="center"-->
+<!--            android:layout_marginStart="21dp"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/bookclub_participation_main_tv"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/bookclub_participation_main_tv"-->
+<!--            app:layout_constraintStart_toStartOf="parent"/>-->
+
 
         <TextView
             android:id="@+id/bookclub_participation_sub_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1월 북클럽"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textColor="@color/colorLabelNeutral"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/bookclub_participation_main_tv"
-            app:layout_constraintStart_toStartOf="@+id/bookclub_participation_main_tv"/>
+            android:layout_marginTop="25dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/bookclub_participation_rv"
-            android:layout_width="320dp"
-            android:layout_height="412dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:orientation="horizontal"
             tools:listitem="@layout/item_bookclub_book_participation"
             android:layout_marginTop="13dp"
+            android:layout_marginHorizontal="20dp"
+            app:layout_constraintDimensionRatio="H,320:412"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bookclub_participation_sub_tv"/>
@@ -74,6 +89,6 @@
             app:layout_constraintTop_toTopOf="@+id/bookclub_participation_rv"
             app:layout_constraintBottom_toBottomOf="@+id/bookclub_participation_rv"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
+<!--</ScrollView>-->
