--- a/app/src/main/res/layout/item_bookclub_book_members.xml
+++ b/app/src/main/res/layout/item_bookclub_book_members.xml
@@ -34,6 +34,7 @@
         android:text="주디"
         android:textColor="@color/colorLabelNormal"
         android:textSize="15sp"
+        android:fontFamily="@font/pretendard_regular"
         android:maxLines="1"
         android:ellipsize="end"
         app:layout_constraintStart_toStartOf="@id/item_bookclub_book_members_cover_img_cardview"
