--- a/app/src/main/res/layout/item_bookclub_book_months.xml
+++ b/app/src/main/res/layout/item_bookclub_book_months.xml
@@ -3,6 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="7dp"
+    android:background="@color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
@@ -12,6 +13,7 @@
         app:cardCornerRadius="10dp"
         app:cardElevation="0dp"
         android:layout_marginEnd="12dp"
+        android:background="@color/transparent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -19,7 +21,7 @@
             android:id="@+id/bookclub_month_iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
+            android:scaleType="center"
             android:src="@drawable/img_book_cover1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -54,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="한강 시집"
-        android:textSize="11sp"
+        android:textSize="13sp"
         android:fontFamily="@font/pretendard_regular"
         android:textColor="@color/white"
         android:maxWidth="128dp"
