--- a/app/src/main/res/layout/item_bookclub_review_comment.xml
+++ b/app/src/main/res/layout/item_bookclub_review_comment.xml
@@ -4,22 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
-    android:clickable="true"
-    android:focusable="true"
+    android:background="@color/colorMainBg"
     android:orientation="vertical"
-    android:layout_marginTop="24dp"
-    android:layout_marginHorizontal="20dp"
-    app:layout_constraintTop_toBottomOf="@+id/comment_count_tv"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent">
 
     <LinearLayout
         android:id="@+id/item_linear"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginVertical="14dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/user_image"
@@ -30,9 +26,10 @@
             android:src="@drawable/img_person_icon"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <LinearLayout
@@ -59,13 +56,13 @@
                     android:layout_marginStart="6dp"
                     tools:text="4시간 전"
                     android:textSize="11sp"
-                    android:textColor="@color/colorLabelNeutral"
+                    android:textColor="#E0C2C4C8"
                     android:fontFamily="@font/pretendard_regular"/>
 
             </LinearLayout>
 
             <TextView
-                android:id="@+id/text"
+                android:id="@+id/content_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="서평이 너무 인상 깊네요"
@@ -82,10 +79,11 @@
 
                 <ImageView
                     android:id="@+id/like_ic_iv"
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
-                    android:src="@drawable/ic_filled_heart"
+                    android:layout_width="13dp"
+                    android:layout_height="13dp"
+                    android:src="@drawable/ic_like_on"
                     android:scaleType="center"
+                    android:layout_gravity="center"
                     />
 
                 <TextView
@@ -101,11 +99,12 @@
 
                 <ImageView
                     android:id="@+id/comment_ic_iv"
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
+                    android:layout_width="13dp"
+                    android:layout_height="13dp"
                     android:src="@drawable/ic_comment"
                     android:scaleType="center"
                     android:layout_marginStart="10dp"
+                    android:layout_gravity="center"
                     />
 
                 <TextView
@@ -120,16 +119,18 @@
             </LinearLayout>
         </LinearLayout>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-
         <ImageView
             android:id="@+id/vertical_dot"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:src="@drawable/ic_vertical_dot"
-            android:layout_gravity="end" />
+            android:layout_gravity="end"/>
+
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.6dp"
+        android:background="#28989BA2"
+        tools:ignore="Suspicious0dp" />
 </LinearLayout>
