--- a/app/src/main/res/layout/item_mypage_scrap_folder.xml
+++ b/app/src/main/res/layout/item_mypage_scrap_folder.xml
@@ -24,28 +24,28 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <ImageView
-                android:id="@+id/item_scrap_plus_back_iv1"
+                android:id="@+id/scrap_folder_iv1"
                 android:layout_width="73dp"
                 android:layout_height="73dp"
                 android:scaleType="center"
                 android:background="@drawable/img_mypage_scrap_book1"/>
 
             <ImageView
-                android:id="@+id/item_scrap_plus_back_iv2"
+                android:id="@+id/scrap_folder_iv2"
                 android:layout_width="73dp"
                 android:layout_height="73dp"
                 android:scaleType="center"
                 android:background="@drawable/img_mypage_scrap_book3"/>
 
             <ImageView
-                android:id="@+id/item_scrap_plus_back_iv3"
+                android:id="@+id/scrap_folder_iv3"
                 android:layout_width="73dp"
                 android:layout_height="73dp"
                 android:scaleType="center"
                 android:background="@drawable/img_mypage_scrap_book2"/>
 
             <ImageView
-                android:id="@+id/item_scrap_plus_back_iv4"
+                android:id="@+id/scrap_folder_iv4"
                 android:layout_width="73dp"
                 android:layout_height="73dp"
                 android:scaleType="center"
@@ -57,6 +57,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/folder_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="도서"
