--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -8,7 +8,7 @@
     android:background="#0F0F10"
     tools:context=".BookDetail.BookDetailActivity">
 
-    <!-- 툴바 -->
+    <!-- 툴바 (고정) -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -19,114 +19,125 @@
         app:navigationIcon="@drawable/ic_prev_arrow"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <!-- 홈 버튼 (오른쪽 상단) -->
-        <ImageView
-            android:id="@+id/home_button"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/btn_home"
-            android:contentDescription="홈 버튼"
-            android:layout_gravity="end"
-            android:padding="8dp"
-            android:layout_marginEnd="16dp"/>
-    </androidx.appcompat.widget.Toolbar>
-
-    <!-- 스크롤 가능한 전체 콘텐츠 -->
-
-    <ImageView
-        android:id="@+id/book_background"
-        android:layout_width="match_parent"
-        android:layout_height="303dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/book_sample1"
-        android:alpha="0.6"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
-
-    <!-- 어두운 오버레이 -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="303dp"
-        android:background="#99000000"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
-
-    <!-- 책 번호 -->
-    <TextView
-        android:id="@+id/book_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No.1"
-        android:textSize="12sp"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="@id/book_background"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"/>
-
-    <!-- 책 표지 (가운데) -->
-    <ImageView
-        android:id="@+id/book_cover"
-        android:layout_width="120dp"
-        android:layout_height="160dp"
-        android:layout_marginTop="40dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/book_sample1"
-        app:layout_constraintTop_toTopOf="@id/book_background"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- 책 정보 -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/book_title_bg"
+    <!-- 홈 버튼 (툴바 내부, 오른쪽 상단) -->
+    <ImageView
+        android:id="@+id/home_button"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:src="@drawable/btn_home"
+        android:contentDescription="홈 버튼"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/toolbar"/>
+
+    <!-- 스크롤 가능한 콘텐츠 -->
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@drawable/blur_effect_background"
-        android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="@id/book_background"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <!-- 책 제목 -->
-        <TextView
-            android:id="@+id/book_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="모순"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="70dp"/>
-
-        <!-- 저자 | 출판사 -->
-        <TextView
-            android:id="@+id/book_author_publisher"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="양귀자 장편소설 | 출판사 쓰다"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/book_title"/>
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nested_scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/book_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp">
+
+            <!-- 책 표지 배경 -->
+            <ImageView
+                android:id="@+id/book_bg_iv"
+                android:layout_width="match_parent"
+                android:layout_height="303dp"
+                android:src="@drawable/img_bookclub_detail_book_bg"
+                android:scaleType="fitXY"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+            <ImageView
+                android:id="@+id/line1"
+                android:layout_width="30dp"
+                android:layout_height="2.5dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorPrimaryNormal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/book_bg_iv"
+                 />
+
+            <ImageView
+                android:id="@+id/book_iv"
+                android:layout_width="110dp"
+                android:layout_height="165dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/img_bookclub_detail"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="40dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/line1" />
+
+            <ImageView
+                android:id="@+id/book_info_bg"
+                android:layout_width="match_parent"
+                android:layout_height="133dp"
+                android:background="#99000000"
+                app:layout_constraintBottom_toBottomOf="@id/book_bg_iv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+
+            <TextView
+                android:id="@+id/book_title_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="모순"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/pretendard_bold"
+                android:layout_marginTop="71dp"
+                android:layout_marginStart="20dp"
+                app:layout_constraintTop_toTopOf="@+id/book_info_bg"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/book_author_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="양귀자 장편소설"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/pretendard_medium"
+                app:layout_constraintTop_toBottomOf="@+id/book_title_tv"
+                app:layout_constraintStart_toStartOf="@+id/book_title_tv"/>
+
+            <ImageView
+                android:id="@+id/vertical_gray_line"
+                android:layout_width="0.8dp"
+                android:layout_height="7dp"
+                android:background="#80FFFFFF"
+                app:layout_constraintTop_toTopOf="@+id/book_author_tv"
+                app:layout_constraintBottom_toBottomOf="@+id/book_author_tv"
+                app:layout_constraintStart_toEndOf="@+id/book_author_tv"
+                android:layout_marginStart="5dp"
+                />
+
+            <TextView
+                android:id="@+id/publisher_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="출판사 쓰다"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/pretendard_medium"
+                android:layout_marginStart="12dp"
+                app:layout_constraintTop_toTopOf="@+id/book_author_tv"
+                app:layout_constraintBottom_toBottomOf="@+id/book_author_tv"
+                app:layout_constraintStart_toEndOf="@+id/book_author_tv"/>
 
             <!-- 책 정보 -->
             <TextView
@@ -137,8 +148,9 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/book_bg_iv"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="16dp"/>
 
             <!-- 태그 리스트 -->
             <androidx.recyclerview.widget.RecyclerView
@@ -146,92 +158,98 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toEndOf="@+id/book_info_title"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/book_info_title" />
+                app:layout_constraintTop_toBottomOf="@id/book_info_title"/>
 
-            <!-- 책 설명 -->
-
+            <!-- 출판사 서평 -->
             <TextView
                 android:id="@+id/book_excerpt_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
                 android:text="출판사 서평"
-                android:textColor="@color/white"
                 android:textSize="17sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@id/tag_recycler_view"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@id/tag_recycler_view"
-                app:layout_constraintTop_toBottomOf="@id/tag_recycler_view" />
+                android:textColor="@color/white"
+                app:layout_constraintTop_toBottomOf="@id/tag_recycler_view"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="16dp"/>
 
-            <!-- 서평 목록 -->
             <TextView
                 android:id="@+id/book_excerpt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
                 android:text="인생은 탐구하면서 살아가는 것이 아니라, 살아가면서 탐구하는 것이다. 실수는 되풀이된다. 그것이 인생이다..."
-                android:textColor="@color/white"
                 android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="@id/book_excerpt_title"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@id/book_excerpt_title"
-                app:layout_constraintTop_toBottomOf="@id/book_excerpt_title" />
-
-
-            <!-- 여기에 평점 카드뷰 인클루드 -->
-            <TextView
-                android:id="@+id/rating_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="평점"
                 android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="@id/book_excerpt"
-                app:layout_constraintHorizontal_bias="0.008"
-                app:layout_constraintStart_toStartOf="@id/book_excerpt"
-                app:layout_constraintTop_toBottomOf="@id/book_excerpt"
-                android:layout_marginTop="30dp"/>
+                app:layout_constraintTop_toBottomOf="@id/book_excerpt_title"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="8dp"/>
 
-            <include
-                android:id="@+id/include_rating_card"
-                layout="@layout/book_info_card"
-                app:layout_constraintTop_toBottomOf="@id/rating_text"
+            <!-- 서평 목록 -->
+            <TextView
+                android:id="@+id/user_rating_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="출판사 서평 들어갈 곳"
+                app:layout_constraintTop_toBottomOf="@id/book_excerpt"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="16dp"/>
+        <TextView
+            android:id="@+id/rating_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="평점"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toBottomOf="@+id/user_rating_view"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="16dp"/>
+
+
+
+            <!-- ConstraintLayout으로 감싸서 include 적용 -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/book_info_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/rating_text"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="8dp">
+
+                <include
+                    layout="@layout/book_info_card"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
-                android:id="@+id/user_rating_text"
+                android:id="@+id/other_review"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="다른 유저들의 서평"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="16dp"
+                android:text="다른 유저의 서평"
                 android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/include_rating_card"
-                app:layout_constraintStart_toStartOf="@id/include_rating_card"
-                app:layout_constraintBottom_toBottomOf="@id/include_rating_card"
-                android:layout_marginTop="16dp"/>
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/book_info_card"
+                android:textStyle="bold"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/user_rating_view"
-                android:layout_width="wrap_content"
+                android:id="@+id/other_review_card"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/user_rating_text"
-                app:layout_constraintStart_toStartOf="@id/user_rating_text"
-                app:layout_constraintEnd_toEndOf="@id/user_rating_text"
-                android:layout_marginTop="8dp" />
-
-
-
+                app:layout_constraintTop_toBottomOf="@id/other_review"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
