--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -87,6 +87,23 @@
         <item name="android:textSize">12sp</item>
     </style>
 
+    <!-- Base application theme. -->
+    <style name="Base.Theme.CustomButtonTest" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
+
+    <style name="Theme.CustomButtonTest" parent="Base.Theme.CustomButtonTest" />
+
+    <style name="CustomMaterialButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="backgroundTint">@color/white_20</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="strokeColor">#CFF305</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="android:textColor">#CFF305</item>
+        <item name="elevation">0dp</item>
+    </style>
+
     <!-- Caption -->
     <style name="caption">
         <item name="fontFamily">@font/pretendard_regular</item>
